Change JWT Auth to Middleware Handler
Caveat: Cache is per endpoint
