# api/swagger.json
@@ -17,30 +17,32 @@
     "host": "localhost:8082",
     "basePath": "/api/",
     "paths": {
-        "/clusters/": {
-            "get": {
+        "/debug/": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
+                "description": "Write metrics to store",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "free"
+                    "debug"
                 ],
+                "summary": "Debug endpoint",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "up to timestamp",
-                        "name": "to",
+                        "description": "Selector",
+                        "name": "selector",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "Debug dump",
                         "schema": {
                             "type": "string"
                         }
@@ -72,32 +74,30 @@
                 }
             }
         },
-        "/debug/": {
-            "post": {
+        "/free/": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Write metrics to store",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "write"
+                    "free"
                 ],
-                "summary": "Debug endpoint",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Job Cluster",
-                        "name": "selector",
+                        "description": "up to timestamp",
+                        "name": "to",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Debug dump",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
