# internal/api/server.go
@@ -19,11 +19,15 @@ func MountRoutes(r *http.ServeMux) {
 		if err != nil {
 			log.Fatalf("starting server failed: %v", err)
 		}
-		publicKey = ed25519.PublicKey(buf)
+		publicKey := ed25519.PublicKey(buf)
+		r.Handle("POST /api/free/", authHandler(http.HandlerFunc(handleFree), publicKey))
+		r.Handle("POST /api/write/", authHandler(http.HandlerFunc(handleWrite), publicKey))
+		r.Handle("GET /api/query/", authHandler(http.HandlerFunc(handleQuery), publicKey))
+		r.Handle("GET /api/debug/", authHandler(http.HandlerFunc(handleDebug), publicKey))
+	} else {
+		r.HandleFunc("POST /api/free/", handleFree)
+		r.HandleFunc("POST /api/write/", handleWrite)
+		r.HandleFunc("GET /api/query/", handleQuery)
+		r.HandleFunc("GET /api/debug/", handleDebug)
 	}
-
-	r.HandleFunc("POST /api/free/", handleFree)
-	r.HandleFunc("POST /api/write/", handleWrite)
-	r.HandleFunc("GET /api/query/", handleQuery)
-	r.HandleFunc("GET /api/debug/", handleDebug)
 }
